React router added, new pages created, added Swap page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/public/assets/images/logo-dex.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://terminal.jup.ag/main-v4.js"></script>
+
     <title>EmeraldDEX</title>
   </head>
   <body>
